--- a/pubs.bib
+++ b/pubs.bib
@@ -1,146 +1,135 @@
-@article{1Monfils_2022,
-	doi = {10.1042/etls20220001},
-	url = {https://doi.org/10.1042%2Fetls20220001},
-	year = 2022,
-	month = {sep},
-	publisher = {Portland Press Ltd.},
-	volume = {6},
-	number = {5},
-	pages = {445--455},
-	author = {Marie-H. Monfils and Michael Domjan},
-	editor = {Amy L Milton},
-	title = {The elegant complexity of fear in non-human animals},
-	journal = {Emerging Topics in Life Sciences}
-}
-@article{2Monfils_2022,
-	doi = {10.3389/fnbeh.2022.954906},
-	url = {https://doi.org/10.3389%2Ffnbeh.2022.954906},
+@article{1Turetsky_2022,
+	doi = {10.1111/josi.12536},
+	url = {https://doi.org/10.1111%2Fjosi.12536},
 	year = 2022,
 	month = {jul},
-	publisher = {Frontiers Media {SA}},
-	volume = {16},
-	author = {Marie-H. Monfils and Hongjoo J. Lee and Roberto U. Cofres{\'{\i}} and Rueben A. Gonzales},
-	title = {Friend recollections, and a collection of collaborations with Nadia},
-	journal = {Frontiers in Behavioral Neuroscience}
+	publisher = {Wiley},
+	author = {Kate M. Turetsky and James P. Curley and Ashli B. Carter and Valerie Purdie-Greenaway},
+	title = {Explaining the gender gap in negotiation performance: Social network ties outweigh internal barriers},
+	journal = {Journal of Social Issues}
 }
-@article{3Monfils_2022,
-	doi = {10.1016/j.biopsych.2022.05.005},
-	url = {https://doi.org/10.1016%2Fj.biopsych.2022.05.005},
+@article{2Padilla_Coreano_2022,
+	doi = {10.1038/s41586-022-04507-5},
+	url = {https://doi.org/10.1038%2Fs41586-022-04507-5},
 	year = 2022,
-	month = {jul},
-	publisher = {Elsevier {BV}},
-	volume = {92},
-	number = {2},
-	pages = {102--103},
-	author = {Marie-H. Monfils},
-	title = {The High Road to Inhibiting Fear Memories},
-	journal = {Biological Psychiatry}
+	month = {mar},
+	publisher = {Springer Science and Business Media {LLC}},
+	volume = {603},
+	number = {7902},
+	pages = {667--671},
+	author = {Nancy Padilla-Coreano and Kanha Batra and Makenzie Patarino and Zexin Chen and Rachel R. Rock and Ruihan Zhang and S{\'{e}}bastien B. Hausmann and Javier C. Weddington and Reesha Patel and Yu E. Zhang and Hao-Shu Fang and Srishti Mishra and Deryn O. LeDuke and Jasmin Revanna and Hao Li and Matilde Borio and Rachelle Pamintuan and Aneesh Bal and Laurel R. Keyes and Avraham Libster and Romy Wichmann and Fergil Mills and Felix H. Taschbach and Gillian A. Matthews and James P. Curley and Ila R. Fiete and Cewu Lu and Kay M. Tye},
+	title = {Cortical ensembles orchestrate social competition through hypothalamic outputs},
+	journal = {Nature}
 }
-@article{4Hilz_2022,
-	doi = {10.1037/bne0000520},
-	url = {https://doi.org/10.1037%2Fbne0000520},
+@article{3Milewski_2022,
+	doi = {10.1098/rstb.2020.0443},
+	url = {https://doi.org/10.1098%2Frstb.2020.0443},
 	year = 2022,
-	month = {aug},
-	publisher = {American Psychological Association ({APA})},
-	volume = {136},
-	number = {4},
-	pages = {318--329},
-	author = {Emily N. Hilz and Marcelle E. Olvera and Dohyun Jun and Megha Chadha and Ross Gillette and Marie-H. Monfils and Andrea C. Gore and Hongjoo J. Lee},
-	title = {Hormonal contraceptives alter amphetamine place preference and responsivity in the intact female rat.},
-	journal = {Behavioral Neuroscience}
+	month = {jan},
+	publisher = {The Royal Society},
+	volume = {377},
+	number = {1845},
+	author = {T. M. Milewski and W. Lee and F. A. Champagne and J. P. Curley},
+	title = {Behavioural and physiological plasticity in social hierarchies},
+	journal = {Philosophical Transactions of the Royal Society B: Biological Sciences}
 }
-@article{5Agee_2022,
-	doi = {10.1016/j.neuroscience.2021.11.032},
-	url = {https://doi.org/10.1016%2Fj.neuroscience.2021.11.032},
-	year = 2021,
+@article{4Strauss_2022,
+	doi = {10.1098/rstb.2020.0436},
+	url = {https://doi.org/10.1098%2Frstb.2020.0436},
+	year = 2022,
+	month = {jan},
+	publisher = {The Royal Society},
+	volume = {377},
+	number = {1845},
+	author = {Eli D. Strauss and Alex R. DeCasien and Gabriela Galindo and Elizabeth A. Hobson and Daizaburo Shizuka and James P. Curley},
+	title = {{DomArchive}: a century of published dominance data},
+	journal = {Philosophical Transactions of the Royal Society B: Biological Sciences}
+}
+@article{5Dwortz_2022,
+	doi = {10.1098/rstb.2020.0444},
+	url = {https://doi.org/10.1098%2Frstb.2020.0444},
+	year = 2022,
+	month = {jan},
+	publisher = {The Royal Society},
+	volume = {377},
+	number = {1845},
+	author = {Madeleine F. Dwortz and James P. Curley and Kay M. Tye and Nancy Padilla-Coreano},
+	title = {Neural systems that facilitate the representation of social rank},
+	journal = {Philosophical Transactions of the Royal Society B: Biological Sciences}
+}
+@article{6Strauss_2022,
+	doi = {10.1098/rstb.2020.0432},
+	url = {https://doi.org/10.1098%2Frstb.2020.0432},
+	year = 2022,
+	month = {jan},
+	publisher = {The Royal Society},
+	volume = {377},
+	number = {1845},
+	author = {Eli D. Strauss and James P. Curley and Daizaburo Shizuka and Elizabeth A. Hobson},
+	title = {The centennial of the pecking order: current state and future prospects for the study of dominance hierarchies},
+	journal = {Philosophical Transactions of the Royal Society B: Biological Sciences}
+}
+@article{7Chase_2022,
+	doi = {10.1016/j.socnet.2021.09.002},
+	url = {https://doi.org/10.1016%2Fj.socnet.2021.09.002},
+	year = 2022,
 	month = {jan},
 	publisher = {Elsevier {BV}},
-	volume = {481},
-	pages = {30--46},
-	author = {Laura A. Agee and Victoria Nemchek and Cassidy A. Malone and Hongjoo J. Lee and Marie-H. Monfils},
-	title = {Appetitive Behavior in the Social Transmission of Food Preference Paradigm Predicts Activation of Orexin-A producing Neurons in a Sex-Dependent Manner},
-	journal = {Neuroscience}
+	volume = {68},
+	pages = {356--373},
+	author = {Ivan D. Chase and Darius Coelho and Won Lee and Klaus Mueller and James P. Curley},
+	title = {Networks never rest: An investigation of network evolution in three species of animals},
+	journal = {Social Networks}
 }
-@article{6Nemchek_2021,
-	doi = {10.3389/fnbeh.2021.714927},
-	url = {https://doi.org/10.3389%2Ffnbeh.2021.714927},
-	year = 2021,
-	month = {jul},
-	publisher = {Frontiers Media {SA}},
-	volume = {15},
-	author = {Victoria Nemchek and Laura A. Agee and Cassidy A. Malone and Marissa Raskin and Sydney Seese and Marie H. Monfils},
-	title = {Altering Perceived Context: Transportation Cues Influence Novelty-Induced Context Exploration},
-	journal = {Frontiers in Behavioral Neuroscience}
+@article{8Lee_2021,
+	doi = {10.1101/2021.09.04.458987},
+	url = {https://doi.org/10.1101%2F2021.09.04.458987},
+	year = 2022,
+	month = {sep},
+	publisher = {Cold Spring Harbor Laboratory},
+	author = {Won Lee and Tyler M. Milewski and Madeleine F. Dwortz and Rebecca L. Young and Andrew D. Gaudet and Laura K. Fonken and Frances A. Champagne and James P. Curley},
+	title = {Distinct inflammatory and transcriptomic profiles in dominant versus subordinate males in mouse social hierarchies},
+	journal = {Brain Behavior and Immunity}
 }
-@article{7Hilz_2022,
-	doi = {10.1037/bne0000484},
-	url = {https://doi.org/10.1037%2Fbne0000484},
+@article{9Lee_2021,
+	doi = {10.1038/s41598-021-82255-8},
+	url = {https://doi.org/10.1038%2Fs41598-021-82255-8},
 	year = 2021,
 	month = {feb},
-	publisher = {American Psychological Association ({APA})},
-	volume = {136},
+	publisher = {Springer Science and Business Media {LLC}},
+	volume = {11},
 	number = {1},
-	pages = {19--29},
-	author = {Emily N. Hilz and Suzanne M. Lewis and Megan E. Olshavsky and Elizabeth S. Khoury and Andrea C. Gore and Marie H. Monfils and Hongjoo J. Lee},
-	title = {Sex differences in conditioned orienting and the role of estradiol in addiction-related behaviors.},
-	journal = {Behavioral Neuroscience}
+	author = {Won Lee and Hollie N. Dowd and Cyrus Nikain and Madeleine F. Dwortz and Eilene D. Yang and James P. Curley},
+	title = {Effect of relative social rank within a social hierarchy on neural activation in response to familiar or unfamiliar social signals},
+	journal = {Scientific Reports}
 }
-@article{8Gershman_2021,
-	doi = {10.3389/fnbeh.2021.786900},
-	url = {https://doi.org/10.3389%2Ffnbeh.2021.786900},
-	year = 2021,
+@article{10Turetsky_2020,
+	doi = {10.1126/sciadv.aba9221},
+	url = {https://doi.org/10.1126%2Fsciadv.aba9221},
+	year = 2020,
 	month = {nov},
-	publisher = {Frontiers Media {SA}},
-	volume = {15},
-	author = {Samuel J. Gershman and Carolyn E. Jones and Kenneth A. Norman and Marie-H. Monfils and Yael Niv},
-	title = {Corrigendum: Gradual extinction prevents the return of fear: implications for the discovery of state},
-	journal = {Frontiers in Behavioral Neuroscience}
+	publisher = {American Association for the Advancement of Science ({AAAS})},
+	volume = {6},
+	number = {45},
+	author = {Kate M. Turetsky and Valerie Purdie-Greenaway and Jonathan E. Cook and James P. Curley and Geoffrey L. Cohen},
+	title = {A psychological intervention strengthens students' peer social networks and promotes persistence in {STEM}},
+	journal = {Science Advances}
 }
-@article{9Lancaster_2020,
-	doi = {10.1016/j.brat.2020.103730},
-	url = {https://doi.org/10.1016%2Fj.brat.2020.103730},
+@article{11Beery_2020,
+	doi = {10.1016/j.neubiorev.2020.03.033},
+	url = {https://doi.org/10.1016%2Fj.neubiorev.2020.03.033},
 	year = 2020,
-	month = {dec},
+	month = {jun},
 	publisher = {Elsevier {BV}},
-	volume = {135},
-	pages = {103730},
-	author = {Cynthia L. Lancaster and Marie-H. Monfils and Michael J. Telch},
-	title = {Augmenting exposure therapy with pre-extinction fear memory reactivation and deepened extinction: A randomized controlled trial},
-	journal = {Behaviour Research and Therapy}
-}
-@article{10Blujus_2020,
-	doi = {10.1037/pne0000209},
-	url = {https://doi.org/10.1037%2Fpne0000209},
-	year = 2020,
-	month = {sep},
-	publisher = {American Psychological Association ({APA})},
-	volume = {13},
-	number = {3},
-	pages = {406--423},
-	author = {Jenna K. Blujus and Ina Prevalska and Silvia F. Quevedo and Allison Auchter and Laura E. Korthauer and Michelle M. Dunk and Marie H. Monfils and Ira Driscoll},
-	title = {Updating mechanisms using an olfactory cue were not successful in improving memory in a rodent model of cognitive aging or in older adults.},
-	journal = {Psychology {\&} Neuroscience}
-}
-@article{11Auchter_2020,
-	doi = {10.3389/fncel.2020.00130},
-	url = {https://doi.org/10.3389%2Ffncel.2020.00130},
-	year = 2020,
-	month = {may},
-	publisher = {Frontiers Media {SA}},
-	volume = {14},
-	author = {Allison M. Auchter and Douglas W. Barrett and Marie H. Monfils and F. Gonzalez-Lima},
-	title = {Methylene Blue Preserves Cytochrome Oxidase Activity and Prevents Neurodegeneration and Memory Impairment in Rats With Chronic Cerebral Hypoperfusion},
-	journal = {Frontiers in Cellular Neuroscience}
+	volume = {113},
+	pages = {354--372},
+	author = {Annaliese K. Beery and Melissa M. Holmes and Won Lee and James P. Curley},
+	title = {Stress in groups: Lessons from non-traditional rodent species and housing models},
+	journal = {Neuroscience {\&} Biobehavioral Reviews}
 }
 @Article{1,
-  title = {CO2 Reactivity as a Biomarker of Exposure-based Therapy Non-Response: Study Protocol. },
-  author = {Marie-H. Monfils},
-  journal = {BMC Psychiatry},
-  year = {2022},
-}
-@Article{2,
-  title = {Explaining the effectiveness of fear extinction through latent-cause inference. },
-  author = {Marie-H. Monfils},
-  journal = {Neurons Behavior Data Analysis & Theory Journal. },
+  title = {Social status mediated variation in hypothalamic transcriptional profiles of male mice},
+  author = {James Curley},
+  journal = {Hormones & Behavior},
   year = {2022},
 }
