trying to fix ordering and testing patent section

--- a/pubs.bib
+++ b/pubs.bib
@@ -1,135 +1,58 @@
-@article{1Turetsky_2022,
-	doi = {10.1111/josi.12536},
-	url = {https://doi.org/10.1111%2Fjosi.12536},
-	year = 2022,
-	month = {jul},
-	publisher = {Wiley},
-	author = {Kate M. Turetsky and James P. Curley and Ashli B. Carter and Valerie Purdie-Greenaway},
-	title = {Explaining the gender gap in negotiation performance: Social network ties outweigh internal barriers},
-	journal = {Journal of Social Issues}
-}
-@article{2Padilla_Coreano_2022,
-	doi = {10.1038/s41586-022-04507-5},
-	url = {https://doi.org/10.1038%2Fs41586-022-04507-5},
-	year = 2022,
-	month = {mar},
-	publisher = {Springer Science and Business Media {LLC}},
-	volume = {603},
-	number = {7902},
-	pages = {667--671},
-	author = {Nancy Padilla-Coreano and Kanha Batra and Makenzie Patarino and Zexin Chen and Rachel R. Rock and Ruihan Zhang and S{\'{e}}bastien B. Hausmann and Javier C. Weddington and Reesha Patel and Yu E. Zhang and Hao-Shu Fang and Srishti Mishra and Deryn O. LeDuke and Jasmin Revanna and Hao Li and Matilde Borio and Rachelle Pamintuan and Aneesh Bal and Laurel R. Keyes and Avraham Libster and Romy Wichmann and Fergil Mills and Felix H. Taschbach and Gillian A. Matthews and James P. Curley and Ila R. Fiete and Cewu Lu and Kay M. Tye},
-	title = {Cortical ensembles orchestrate social competition through hypothalamic outputs},
-	journal = {Nature}
-}
-@article{3Milewski_2022,
-	doi = {10.1098/rstb.2020.0443},
-	url = {https://doi.org/10.1098%2Frstb.2020.0443},
-	year = 2022,
-	month = {jan},
-	publisher = {The Royal Society},
-	volume = {377},
-	number = {1845},
-	author = {T. M. Milewski and W. Lee and F. A. Champagne and J. P. Curley},
-	title = {Behavioural and physiological plasticity in social hierarchies},
-	journal = {Philosophical Transactions of the Royal Society B: Biological Sciences}
-}
-@article{4Strauss_2022,
-	doi = {10.1098/rstb.2020.0436},
-	url = {https://doi.org/10.1098%2Frstb.2020.0436},
-	year = 2022,
-	month = {jan},
-	publisher = {The Royal Society},
-	volume = {377},
-	number = {1845},
-	author = {Eli D. Strauss and Alex R. DeCasien and Gabriela Galindo and Elizabeth A. Hobson and Daizaburo Shizuka and James P. Curley},
-	title = {{DomArchive}: a century of published dominance data},
-	journal = {Philosophical Transactions of the Royal Society B: Biological Sciences}
-}
-@article{5Dwortz_2022,
-	doi = {10.1098/rstb.2020.0444},
-	url = {https://doi.org/10.1098%2Frstb.2020.0444},
-	year = 2022,
-	month = {jan},
-	publisher = {The Royal Society},
-	volume = {377},
-	number = {1845},
-	author = {Madeleine F. Dwortz and James P. Curley and Kay M. Tye and Nancy Padilla-Coreano},
-	title = {Neural systems that facilitate the representation of social rank},
-	journal = {Philosophical Transactions of the Royal Society B: Biological Sciences}
-}
-@article{6Strauss_2022,
-	doi = {10.1098/rstb.2020.0432},
-	url = {https://doi.org/10.1098%2Frstb.2020.0432},
-	year = 2022,
-	month = {jan},
-	publisher = {The Royal Society},
-	volume = {377},
-	number = {1845},
-	author = {Eli D. Strauss and James P. Curley and Daizaburo Shizuka and Elizabeth A. Hobson},
-	title = {The centennial of the pecking order: current state and future prospects for the study of dominance hierarchies},
-	journal = {Philosophical Transactions of the Royal Society B: Biological Sciences}
-}
-@article{7Chase_2022,
-	doi = {10.1016/j.socnet.2021.09.002},
-	url = {https://doi.org/10.1016%2Fj.socnet.2021.09.002},
-	year = 2022,
-	month = {jan},
-	publisher = {Elsevier {BV}},
-	volume = {68},
-	pages = {356--373},
-	author = {Ivan D. Chase and Darius Coelho and Won Lee and Klaus Mueller and James P. Curley},
-	title = {Networks never rest: An investigation of network evolution in three species of animals},
-	journal = {Social Networks}
-}
-@article{8Lee_2021,
-	doi = {10.1101/2021.09.04.458987},
-	url = {https://doi.org/10.1101%2F2021.09.04.458987},
-	year = 2022,
-	month = {sep},
-	publisher = {Cold Spring Harbor Laboratory},
-	author = {Won Lee and Tyler M. Milewski and Madeleine F. Dwortz and Rebecca L. Young and Andrew D. Gaudet and Laura K. Fonken and Frances A. Champagne and James P. Curley},
-	title = {Distinct inflammatory and transcriptomic profiles in dominant versus subordinate males in mouse social hierarchies},
-	journal = {Brain Behavior and Immunity}
-}
-@article{9Lee_2021,
-	doi = {10.1038/s41598-021-82255-8},
-	url = {https://doi.org/10.1038%2Fs41598-021-82255-8},
+@article{1Seo_2021,
+	doi = {10.1017/s0954579420001832},
+	url = {https://doi.org/10.1017%2Fs0954579420001832},
 	year = 2021,
-	month = {feb},
-	publisher = {Springer Science and Business Media {LLC}},
-	volume = {11},
+	month = {mar},
+	publisher = {Cambridge University Press ({CUP})},
+	volume = {34},
+	number = {3},
+	pages = {1104--1114},
+	author = {Eunjin Seo and Hae Yeon Lee and Jeremy P. Jamieson and Harry Reis and Robert A. Josephs and Christopher G. Beevers and David S. Yeager},
+	title = {Trait attributions and threat appraisals explain why an entity theory of personality predicts greater internalizing symptoms during adolescence},
+	journal = {Development and Psychopathology}
+}
+@article{2Chafkin_2021,
+	doi = {10.1017/s0954579420001935},
+	url = {https://doi.org/10.1017%2Fs0954579420001935},
+	year = 2021,
+	month = {jan},
+	publisher = {Cambridge University Press ({CUP})},
+	volume = {34},
+	number = {3},
+	pages = {1064--1078},
+	author = {Julia E. Chafkin and David S. Yeager and Joseph M. O{\textquotesingle}Brien and Hae Yeon Lee and Ciara A. McAfee and Robert A. Josephs},
+	title = {Gonadal and adrenal hormones interact with pubertal maturation to predict depressive symptoms in a group of high-school females},
+	journal = {Development and Psychopathology}
+}
+@article{3Feldman_2021,
+	doi = {10.1037/tra0000957},
+	url = {https://doi.org/10.1037%2Ftra0000957},
+	year = 2020,
+	month = {jan},
+	publisher = {American Psychological Association ({APA})},
+	volume = {13},
 	number = {1},
-	author = {Won Lee and Hollie N. Dowd and Cyrus Nikain and Madeleine F. Dwortz and Eilene D. Yang and James P. Curley},
-	title = {Effect of relative social rank within a social hierarchy on neural activation in response to familiar or unfamiliar social signals},
-	journal = {Scientific Reports}
+	pages = {75--83},
+	author = {Talya R. Feldman and Caryn L. Carlson and Leslie K. Rice and Marc I. Kruse and Christopher G. Beevers and Michael J. Telch and Robert A. Josephs},
+	title = {Factors predicting the development of psychopathology among first responders: A prospective, longitudinal study.},
+	journal = {Psychological Trauma: Theory, Research, Practice, and Policy}
 }
-@article{10Turetsky_2020,
-	doi = {10.1126/sciadv.aba9221},
-	url = {https://doi.org/10.1126%2Fsciadv.aba9221},
+@article{4Lee_2020,
+	doi = {10.1111/cdev.13422},
+	url = {https://doi.org/10.1111%2Fcdev.13422},
 	year = 2020,
-	month = {nov},
-	publisher = {American Association for the Advancement of Science ({AAAS})},
-	volume = {6},
-	number = {45},
-	author = {Kate M. Turetsky and Valerie Purdie-Greenaway and Jonathan E. Cook and James P. Curley and Geoffrey L. Cohen},
-	title = {A psychological intervention strengthens students' peer social networks and promotes persistence in {STEM}},
-	journal = {Science Advances}
-}
-@article{11Beery_2020,
-	doi = {10.1016/j.neubiorev.2020.03.033},
-	url = {https://doi.org/10.1016%2Fj.neubiorev.2020.03.033},
-	year = 2020,
-	month = {jun},
-	publisher = {Elsevier {BV}},
-	volume = {113},
-	pages = {354--372},
-	author = {Annaliese K. Beery and Melissa M. Holmes and Won Lee and James P. Curley},
-	title = {Stress in groups: Lessons from non-traditional rodent species and housing models},
-	journal = {Neuroscience {\&} Biobehavioral Reviews}
+	month = {sep},
+	publisher = {Wiley},
+	volume = {91},
+	number = {6},
+	pages = {2141--2159},
+	author = {Hae Yeon Lee and Jeremy P. Jamieson and Harry T. Reis and Christopher G. Beevers and Robert A. Josephs and Michael C. Mullarkey and Joseph M. O'Brien and David S. Yeager},
+	title = {Getting Fewer {\textquotedblleft}Likes{\textquotedblright} Than Others on Social Media Elicits Emotional Distress Among Victimized Adolescents},
+	journal = {Child Development}
 }
 @Article{1,
-  title = {Social status mediated variation in hypothalamic transcriptional profiles of male mice},
-  author = {James Curley},
-  journal = {Hormones & Behavior},
+  title = {Updating perspectives on the dual-hormone hypothesis: Explicit self-reported dominance versus implicit behavioral expressions},
+  author = {Robert A Josephs},
+  journal = {Adaptive Human Behavior and Physiology},
   year = {2022},
 }
