--- a/preprints.bib
+++ b/preprints.bib
@@ -1,18 +1,45 @@
-@article{1Lee_2021,
-	doi = {10.1101/2021.09.04.458987},
-	url = {https://doi.org/10.1101%2F2021.09.04.458987},
-	year = 2021,
-	month = {sep},
-	publisher = {Cold Spring Harbor Laboratory},
-	author = {Won Lee and Tyler M. Milewski and Madeleine F. Dwortz and Rebecca L. Young and Andrew D. Gaudet and Laura K. Fonken and Frances A. Champagne and James P. Curley},
-	title = {Distinct inflammatory and transcriptomic profiles in dominant versus subordinate males in mouse social hierarchies}
-}
-@article{2Padilla_Coreano_2020,
-	doi = {10.21203/rs.3.rs-94115/v1},
-	url = {https://doi.org/10.21203%2Frs.3.rs-94115%2Fv1},
-	year = 2020,
-	month = {nov},
+@article{1Smits_2022,
+	doi = {10.21203/rs.3.rs-2298817/v1},
+	url = {https://doi.org/10.21203%2Frs.3.rs-2298817%2Fv1},
+	year = 2022,
+	month = {dec},
 	publisher = {Research Square Platform {LLC}},
-	author = {Nancy Padilla-Coreano and Kanha Batra and Makenzie Patarino and Zexin Chen and Rachel Rock and Ruihan Zhang and Sebastien Hausmann and Javier Weddington and Reesha Patel and Yu Zhang and Hao-Shu Fang and Laurel Keyes and Avraham Libster and Gillian Matthews and James Curley and Ila Fiete and Cewu Lu and Kay Tye},
-	title = {A cortical-hypothalamic circuit decodes social rank and promotes dominance behavior}
+	author = {Jasper A. J. Smits and Marie-H. Monfils and Michael W. Otto and Michael J. Telch and Jason Shumake and Justin S. Feinstein and Sahib S. Khalsa and Adam R. Cobb and E. Marie Parsons and Laura J. Long and Bryan McSpadden and David Johnson and Alma Greenberg and Exposure Therapy Consortium Therapy Consortium},
+	title = {{CO}2 Reactivity as a Biomarker of Exposure-based Therapy Non-Response: Study Protocol}
+}
+@article{2Agee_2022,
+	doi = {10.1101/2021.12.30.474464},
+	url = {https://doi.org/10.1101%2F2021.12.30.474464},
+	year = 2022,
+	month = {jan},
+	publisher = {Cold Spring Harbor Laboratory},
+	author = {Laura A. Agee and Emily N. Hilz and Dohyun Jun and Victoria Nemchek and Hongjoo J. Lee and Marie-H. Monfils},
+	title = {Patterns of Arc {mRNA} expression in the rat brain following dual recall of fear- and reward-based socially acquired information}
+}
+@article{3Song_2021,
+	doi = {10.31234/osf.io/2fhr7},
+	url = {https://doi.org/10.31234%2Fosf.io%2F2fhr7},
+	year = 2021,
+	month = {oct},
+	publisher = {Center for Open Science},
+	author = {Mingyu Song and Carolyn Jones and Marie-H. Monfils and Yael Niv},
+	title = {Explaining the effectiveness of fear extinction through latent-cause inference}
+}
+@article{4Hilz_2021,
+	doi = {10.1101/2021.07.20.453088},
+	url = {https://doi.org/10.1101%2F2021.07.20.453088},
+	year = 2021,
+	month = {jul},
+	publisher = {Cold Spring Harbor Laboratory},
+	author = {Emily N Hilz and Laura A. Agee and Donyun Jun and Marie H Monfils and Hongjoo J. Lee},
+	title = {Expression patterns of Arc {mRNA} after renewal of appetitive behavior in female rats}
+}
+@article{5Hilz_2021,
+	doi = {10.1101/2021.07.28.454029},
+	url = {https://doi.org/10.1101%2F2021.07.28.454029},
+	year = 2021,
+	month = {jul},
+	publisher = {Cold Spring Harbor Laboratory},
+	author = {Emily N. Hilz and Marcelle Olvera and Dohyun Jun and Megha Chadha and Ross Gillette and Marie-H. Monfils and Andrea C. Gore and Hongjoo J. Lee},
+	title = {Hormonal contraceptives alter amphetamine place preference and responsivity in the intact female rat}
 }
