first cv commits

--- a/chaps.bib
+++ b/chaps.bib
@@ -1,21 +1,7 @@
 @InCollection{1,
-  title = {Reconsolidation and Fear extinction: an update.},
-  author = {Marie-H. Monfils},
-  booktitle = {Current Topics in Behavioral Neurosciences (CTBN). Mohamed Milad and Seth Norrholm, Editors. },
+  title = {Calvin Perry Stone (1892 - 1954)},
+  author = {Juan M. Dominguez},
+  booktitle = {Biographical History of Behavioral Neuroendocrinology},
   year = {2022},
-  publisher = {.},
-}
-@InCollection{2,
-  title = {How Can Intrusive Thinking Be Conceptualized at the Level of Psychological Mechanisms? },
-  author = {Marie-H. Monfils},
-  booktitle = {Ernst Strungmann Forum book Intrusive Thinking across Neuropsychological Disorders.},
-  year = {2021},
-  publisher = {.},
-}
-@InCollection{3,
-  title = {Neuropsychological Mechanisms of Intrusive Thinking. },
-  author = {Marie-H. Monfils},
-  booktitle = {In Ernst Strungmann Forum book Intrusive Thinking across Neuropsychological Disorders},
-  year = {2021},
   publisher = {.},
 }
