--- a/pubs.bib
+++ b/pubs.bib
@@ -1,58 +1,18 @@
-@article{1Seo_2021,
-	doi = {10.1017/s0954579420001832},
-	url = {https://doi.org/10.1017%2Fs0954579420001832},
-	year = 2021,
-	month = {mar},
-	publisher = {Cambridge University Press ({CUP})},
-	volume = {34},
-	number = {3},
-	pages = {1104--1114},
-	author = {Eunjin Seo and Hae Yeon Lee and Jeremy P. Jamieson and Harry Reis and Robert A. Josephs and Christopher G. Beevers and David S. Yeager},
-	title = {Trait attributions and threat appraisals explain why an entity theory of personality predicts greater internalizing symptoms during adolescence},
-	journal = {Development and Psychopathology}
-}
-@article{2Chafkin_2021,
-	doi = {10.1017/s0954579420001935},
-	url = {https://doi.org/10.1017%2Fs0954579420001935},
-	year = 2021,
-	month = {jan},
-	publisher = {Cambridge University Press ({CUP})},
-	volume = {34},
-	number = {3},
-	pages = {1064--1078},
-	author = {Julia E. Chafkin and David S. Yeager and Joseph M. O{\textquotesingle}Brien and Hae Yeon Lee and Ciara A. McAfee and Robert A. Josephs},
-	title = {Gonadal and adrenal hormones interact with pubertal maturation to predict depressive symptoms in a group of high-school females},
-	journal = {Development and Psychopathology}
-}
-@article{3Feldman_2021,
-	doi = {10.1037/tra0000957},
-	url = {https://doi.org/10.1037%2Ftra0000957},
-	year = 2020,
-	month = {jan},
-	publisher = {American Psychological Association ({APA})},
-	volume = {13},
-	number = {1},
-	pages = {75--83},
-	author = {Talya R. Feldman and Caryn L. Carlson and Leslie K. Rice and Marc I. Kruse and Christopher G. Beevers and Michael J. Telch and Robert A. Josephs},
-	title = {Factors predicting the development of psychopathology among first responders: A prospective, longitudinal study.},
-	journal = {Psychological Trauma: Theory, Research, Practice, and Policy}
-}
-@article{4Lee_2020,
-	doi = {10.1111/cdev.13422},
-	url = {https://doi.org/10.1111%2Fcdev.13422},
-	year = 2020,
-	month = {sep},
-	publisher = {Wiley},
-	volume = {91},
-	number = {6},
-	pages = {2141--2159},
-	author = {Hae Yeon Lee and Jeremy P. Jamieson and Harry T. Reis and Christopher G. Beevers and Robert A. Josephs and Michael C. Mullarkey and Joseph M. O'Brien and David S. Yeager},
-	title = {Getting Fewer {\textquotedblleft}Likes{\textquotedblright} Than Others on Social Media Elicits Emotional Distress Among Victimized Adolescents},
-	journal = {Child Development}
+@article{1Martz_2023,
+	doi = {10.1016/j.yhbeh.2022.105296},
+	url = {https://doi.org/10.1016%2Fj.yhbeh.2022.105296},
+	year = 2023,
+	month = {feb},
+	publisher = {Elsevier {BV}},
+	volume = {148},
+	pages = {105296},
+	author = {Julia R. Martz and Adriana Vasquez and Ross Gillette and Andrea C. Gore and Juan M. Dominguez},
+	title = {The medial preoptic area and acute cocaine{\textquotesingle}s stimulant effects in rats: Potential influences of estradiol and biological sex},
+	journal = {Hormones and Behavior}
 }
 @Article{1,
-  title = {Updating perspectives on the dual-hormone hypothesis: Explicit self-reported dominance versus implicit behavioral expressions},
-  author = {Robert A Josephs},
-  journal = {Adaptive Human Behavior and Physiology},
+  title = {On the Intersection of Hormones and Neuropeptides in the Brain},
+  author = {Juan M. Dominguez},
+  journal = {Frontiers in Behavioral Neuroscience},
   year = {2022},
 }
