--- a/chaps.bib
+++ b/chaps.bib
@@ -1,7 +1,49 @@
 @InCollection{1,
-  title = {Calvin Perry Stone (1892 - 1954)},
-  author = {Juan M. Dominguez},
-  booktitle = {Biographical History of Behavioral Neuroendocrinology},
+  title = {Freihart, B. K., & McMahon, L, Hahnel, R., & Meston, C. M., (In press). Relationship satisfaction. },
+  author = {Cindy Meston},
+  booktitle = {In: T. K. Shackelford  (Ed.), Encyclopedia of Sexual Psychology and Behavior, Springer Nature.},
+  year = {2023},
+  publisher = {.},
+}
+@InCollection{2,
+  title = {McMahon, L., Freihart, B. K., & Meston, C. M., (In press). Intimate partner sexual violence: Interventions. },
+  author = {Cindy Meston},
+  booktitle = { In: T. K. Shackelford  (Ed.), Encyclopedia of Domestic Violence.},
+  year = {2023},
+  publisher = {.},
+}
+@InCollection{3,
+  title = {Female Orgasmic Disorder},
+  author = {Cindy Meston},
+  booktitle = {In: A Lykins (Ed.), Encylopedia for Sexuality and Gender. New York: Springer.},
   year = {2022},
+  publisher = {.},
+}
+@InCollection{4,
+  title = {Sexual dysfunction},
+  author = {Cindy Meston},
+  booktitle = {In: B. Kreuger & P. Blaney (Eds) Oxford Textbook of Psychopathology (4th Ed).},
+  year = {2022},
+  publisher = {.},
+}
+@InCollection{5,
+  title = {The effects of acute exercise on physiological sexual arousal in women.},
+  author = {Cindy Meston},
+  booktitle = {In: A. C. Hackney (Ed.) Sex Hormones, Exercise, and Women (2nd Ed). New York: Springer Nature.},
+  year = {2022},
+  publisher = {.},
+}
+@InCollection{6,
+  title = {Sexual satisfaction and gender differences.},
+  author = {Cindy Meston},
+  booktitle = {In: Michalos, A. C. (Ed.) Encyclopedia of Quality of Life and Well-Being Research (2nd ed). Netherlands: Springer.},
+  year = {2021},
+  publisher = {.},
+}
+@InCollection{7,
+  title = {Female Sexual Arousal Disorder},
+  author = {Cindy Meston},
+  booktitle = {In: K. S. K. Hall, & Y. M. Binik (Eds), Principles and Practice of Sex Therapy (6th Ed), (pp. 41-62). New York: The Guilford Press. },
+  year = {2020},
   publisher = {.},
 }
