--- a/pubs.bib
+++ b/pubs.bib
@@ -1,18 +1,128 @@
-@article{1Martz_2023,
-	doi = {10.1016/j.yhbeh.2022.105296},
-	url = {https://doi.org/10.1016%2Fj.yhbeh.2022.105296},
-	year = 2023,
+@article{1Sears_2022,
+	doi = {10.1192/j.eurpsy.2022.2075},
+	url = {https://doi.org/10.1192%2Fj.eurpsy.2022.2075},
+	year = 2022,
+	month = {jun},
+	publisher = {Royal College of Psychiatrists},
+	volume = {65},
+	number = {S1},
+	pages = {S802--S803},
+	author = {M. Sears and L. Mcmahon and C. Crosby and B. Freihart and C. Meston},
+	title = {A Multidimensional Evaluation of Intimacy},
+	journal = {European Psychiatry}
+}
+@article{2Freihart_2022,
+	doi = {10.1192/j.eurpsy.2022.717},
+	url = {https://doi.org/10.1192%2Fj.eurpsy.2022.717},
+	year = 2022,
+	month = {jun},
+	publisher = {Royal College of Psychiatrists},
+	volume = {65},
+	number = {S1},
+	pages = {S280--S280},
+	author = {B. Freihart and M. Sears and C. Meston},
+	title = {Interpersonal autonomic synchrony and sexual satisfaction: A preliminary examination},
+	journal = {European Psychiatry}
+}
+@article{3Sears_Greer_2022,
+	doi = {10.1016/j.sxmr.2022.06.006},
+	url = {https://doi.org/10.1016%2Fj.sxmr.2022.06.006},
+	year = 2022,
+	month = {oct},
+	publisher = {Oxford University Press ({OUP})},
+	volume = {10},
+	number = {4},
+	pages = {543--553},
+	author = {Mackenzie A. Sears-Greer and Bridget K. Friehart and Cindy M. Meston},
+	title = {A Review of Undergraduate Student Disclosures of Sexual Violence},
+	journal = {Sexual Medicine Reviews}
+}
+@article{4Mesk__2022,
+	doi = {10.1007/s10508-022-02380-x},
+	url = {https://doi.org/10.1007%2Fs10508-022-02380-x},
+	year = 2022,
+	month = {aug},
+	publisher = {Springer Science and Business Media {LLC}},
+	volume = {51},
+	number = {8},
+	pages = {4007--4022},
+	author = {Norbert Mesk{\'{o}} and Andr{\'{a}}s N. Zsid{\'{o}} and B{\'{e}}la Birk{\'{a}}s and Cindy M. Meston and David M. Buss},
+	title = {Why Hungarians Have Sex: Development and Validation of a Brief 15-Item Instrument ({YSEX}?-15H)},
+	journal = {Archives of Sexual Behavior}
+}
+@article{5Mesk__2021,
+	doi = {10.1007/s10508-021-02072-y},
+	url = {https://doi.org/10.1007%2Fs10508-021-02072-y},
+	year = 2021,
+	month = {nov},
+	publisher = {Springer Science and Business Media {LLC}},
+	volume = {51},
+	number = {1},
+	pages = {465--489},
+	author = {Norbert Mesk{\'{o}} and D{\'{o}}ra Szatm{\'{a}}ri and Andr{\'{a}}s L{\'{a}}ng and Cindy M. Meston and David M. Buss},
+	title = {Why Hungarians Have Sex ({YSEX}?-{HSF})},
+	journal = {Archives of Sexual Behavior}
+}
+@article{6Handy_2020,
+	doi = {10.1080/0092623x.2020.1801542},
+	url = {https://doi.org/10.1080%2F0092623x.2020.1801542},
+	year = 2020,
+	month = {aug},
+	publisher = {Informa {UK} Limited},
+	volume = {47},
+	number = {1},
+	pages = {32--42},
+	author = {Ariel B. Handy and Cindy M. Meston},
+	title = {An Objective Measure of Vaginal Lubrication in Women With and Without Sexual Arousal Concerns},
+	journal = {Journal of Sex {\&} Marital Therapy}
+}
+@article{7Handy_2020,
+	doi = {10.1080/0092623x.2020.1758859},
+	url = {https://doi.org/10.1080%2F0092623x.2020.1758859},
+	year = 2020,
+	month = {may},
+	publisher = {Informa {UK} Limited},
+	volume = {46},
+	number = {5},
+	pages = {447--459},
+	author = {Ariel B. Handy and Bridget K. Freihart and Cindy M. Meston},
+	title = {The Relationship between Subjective and Physiological Sexual Arousal in Women with and without Arousal Concerns},
+	journal = {Journal of Sex {\&} Marital Therapy}
+}
+@article{8Kilimnik_2020,
+	doi = {10.1080/00224499.2020.1718585},
+	url = {https://doi.org/10.1080%2F00224499.2020.1718585},
+	year = 2020,
 	month = {feb},
-	publisher = {Elsevier {BV}},
-	volume = {148},
-	pages = {105296},
-	author = {Julia R. Martz and Adriana Vasquez and Ross Gillette and Andrea C. Gore and Juan M. Dominguez},
-	title = {The medial preoptic area and acute cocaine{\textquotesingle}s stimulant effects in rats: Potential influences of estradiol and biological sex},
-	journal = {Hormones and Behavior}
+	publisher = {Informa {UK} Limited},
+	volume = {58},
+	number = {2},
+	pages = {261--272},
+	author = {Chelsea D. Kilimnik and Cindy M. Meston},
+	title = {Sexual Shame in the Sexual Excitation and Inhibition Propensities of Men With and Without Nonconsensual Sexual Experiences},
+	journal = {The Journal of Sex Research}
 }
 @Article{1,
-  title = {On the Intersection of Hormones and Neuropeptides in the Brain},
-  author = {Juan M. Dominguez},
-  journal = {Frontiers in Behavioral Neuroscience},
+  title = {Sears-Greer, M. A., Freihart, B. K., & Meston, C. M. (2022). A Review of Undergraduate Student Disclosures of Sexual Violence. Sexual Medicine Reviews, 10 (4) 543-553. https://doi.org/10.1016/j.sxmr.2022.06.006},
+  author = {Cindy Meston},
+  journal = {Sexual Medicine Reviews},
   year = {2022},
+}
+@Article{2,
+  title = {Why Hungarians have sex: Development and validation of a 15-Item instrument (YSEX? – 15H)},
+  author = {Cindy Meston},
+  journal = {Archives of Sexual Behavior},
+  year = {2022},
+}
+@Article{3,
+  title = {Sex, sexual arousal, and sexual decision making: An evolutionary perspective.},
+  author = {Cindy Meston},
+  journal = {Personality and Individual Differences},
+  year = {2021},
+}
+@Article{4,
+  title = {Six dimensions of sexual disgust.},
+  author = {Cindy Meston},
+  journal = {Personality and Individual Differences},
+  year = {2020},
 }
