--- a/pubs.bib
+++ b/pubs.bib
@@ -63,7 +63,31 @@
 	title = {Why Hungarians Have Sex ({YSEX}?-{HSF})},
 	journal = {Archives of Sexual Behavior}
 }
-@article{6Handy_2020,
+@article{6Crosby_2021,
+	doi = {10.1016/j.paid.2021.110908},
+	url = {https://doi.org/10.1016%2Fj.paid.2021.110908},
+	year = 2021,
+	month = {aug},
+	publisher = {Elsevier {BV}},
+	volume = {178},
+	pages = {110908},
+	author = {Courtney L. Crosby and David M. Buss and Lawrence K. Cormack and Cindy M. Meston},
+	title = {Corrigendum to {\textquotedblleft}Sex, sexual arousal, and sexual decision making: An evolutionary perspective{\textquotedblright} [Personal. Individ. Differ., 177 (2021): 110826 Pages 1{\textendash}5]},
+	journal = {Personality and Individual Differences}
+}
+@article{7Crosby_2021,
+	doi = {10.1016/j.paid.2021.110826},
+	url = {https://doi.org/10.1016%2Fj.paid.2021.110826},
+	year = 2021,
+	month = {jul},
+	publisher = {Elsevier {BV}},
+	volume = {177},
+	pages = {110826},
+	author = {Courtney L. Crosby and David M. Buss and Lawrence K. Cormack and Cindy M. Meston},
+	title = {Sex, sexual arousal, and sexual decision making: An evolutionary perspective},
+	journal = {Personality and Individual Differences}
+}
+@article{8Handy_2020,
 	doi = {10.1080/0092623x.2020.1801542},
 	url = {https://doi.org/10.1080%2F0092623x.2020.1801542},
 	year = 2020,
@@ -76,7 +100,7 @@
 	title = {An Objective Measure of Vaginal Lubrication in Women With and Without Sexual Arousal Concerns},
 	journal = {Journal of Sex {\&} Marital Therapy}
 }
-@article{7Handy_2020,
+@article{9Handy_2020,
 	doi = {10.1080/0092623x.2020.1758859},
 	url = {https://doi.org/10.1080%2F0092623x.2020.1758859},
 	year = 2020,
@@ -89,7 +113,7 @@
 	title = {The Relationship between Subjective and Physiological Sexual Arousal in Women with and without Arousal Concerns},
 	journal = {Journal of Sex {\&} Marital Therapy}
 }
-@article{8Kilimnik_2020,
+@article{10Kilimnik_2020,
 	doi = {10.1080/00224499.2020.1718585},
 	url = {https://doi.org/10.1080%2F00224499.2020.1718585},
 	year = 2020,
@@ -102,27 +126,54 @@
 	title = {Sexual Shame in the Sexual Excitation and Inhibition Propensities of Men With and Without Nonconsensual Sexual Experiences},
 	journal = {The Journal of Sex Research}
 }
-@Article{1,
-  title = {Sears-Greer, M. A., Freihart, B. K., & Meston, C. M. (2022). A Review of Undergraduate Student Disclosures of Sexual Violence. Sexual Medicine Reviews, 10 (4) 543-553. https://doi.org/10.1016/j.sxmr.2022.06.006},
-  author = {Cindy Meston},
-  journal = {Sexual Medicine Reviews},
-  year = {2022},
+@article{11Crosby_2020,
+	doi = {10.1016/j.paid.2019.109714},
+	url = {https://doi.org/10.1016%2Fj.paid.2019.109714},
+	year = 2020,
+	month = {apr},
+	publisher = {Elsevier {BV}},
+	volume = {156},
+	pages = {109714},
+	author = {Courtney L. Crosby and Patrick K. Durkee and Cindy M. Meston and David M. Buss},
+	title = {Six dimensions of sexual disgust},
+	journal = {Personality and Individual Differences}
 }
-@Article{2,
-  title = {Why Hungarians have sex: Development and validation of a 15-Item instrument (YSEX? – 15H)},
-  author = {Cindy Meston},
-  journal = {Archives of Sexual Behavior},
-  year = {2022},
+@article{12Meston_2019,
+	doi = {10.1016/j.jsxm.2019.10.007},
+	url = {https://doi.org/10.1016%2Fj.jsxm.2019.10.007},
+	year = 2020,
+	month = {nov},
+	publisher = {Oxford University Press ({OUP})},
+	volume = {17},
+	number = {1},
+	pages = {17--25},
+	author = {Cindy M. Meston and Bridget K. Freihart and Ariel B. Handy and Chelsea D. Kilimnik and Raymond C. Rosen},
+	title = {Scoring and Interpretation of the {FSFI}: What can be Learned From 20 Years of use?},
+	journal = {The Journal of Sexual Medicine}
 }
-@Article{3,
-  title = {Sex, sexual arousal, and sexual decision making: An evolutionary perspective.},
-  author = {Cindy Meston},
-  journal = {Personality and Individual Differences},
-  year = {2021},
+@article{13Meston_2019,
+	doi = {10.1080/0092623x.2019.1654581},
+	url = {https://doi.org/10.1080%2F0092623x.2019.1654581},
+	year = 2020,
+	month = {sep},
+	publisher = {Informa {UK} Limited},
+	volume = {46},
+	number = {2},
+	pages = {141--159},
+	author = {Cindy M. Meston and Chelsea D. Kilimnik and Bridget K. Freihart and David M. Buss},
+	title = {Why Humans Have Sex: Development and Psychometric Assessment of a Short-Form Version of the {YSEX}? Instrument},
+	journal = {Journal of Sex {\&} Marital Therapy}
 }
-@Article{4,
-  title = {Six dimensions of sexual disgust.},
-  author = {Cindy Meston},
-  journal = {Personality and Individual Differences},
-  year = {2020},
+@article{14Seal_2020,
+	doi = {10.1016/j.sxmr.2018.03.003},
+	url = {https://doi.org/10.1016%2Fj.sxmr.2018.03.003},
+	year = 2020,
+	month = {apr},
+	publisher = {Oxford University Press ({OUP})},
+	volume = {8},
+	number = {2},
+	pages = {242--255},
+	author = {Brooke N. Seal and Cindy M. Meston},
+	title = {The Impact of Body Awareness on Women's Sexual Health: A Comprehensive Review},
+	journal = {Sexual Medicine Reviews}
 }
